@@ -1,6 +1,6 @@
 package ar.com.mediaranking.controller.error;
 
-import ar.com.mediaranking.exception.MovieAlreadyExistsException;
+import ar.com.mediaranking.exception.AlreadyExistsException;
 import ar.com.mediaranking.exception.NotFoundException;
 import ar.com.mediaranking.models.response.ApiErrorResponse;
 import org.springframework.http.HttpHeaders;
@@ -16,7 +16,6 @@ import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @ControllerAdvice
@@ -27,17 +26,17 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
         ApiErrorResponse error = new ApiErrorResponse(
                 HttpStatus.NOT_FOUND,
                 ex.getMessage(),
-                Arrays.asList("Series Not Found")
+                List.of("Series Not Found")
         );
         return handleExceptionInternal(ex, error, new HttpHeaders(), HttpStatus.NOT_FOUND, request);
     }
 
-    @ExceptionHandler(value = {MovieAlreadyExistsException.class})
+    @ExceptionHandler(value = {AlreadyExistsException.class})
     protected ResponseEntity<Object> handleMovieAlreadyExists(RuntimeException ex, WebRequest request) {
         ApiErrorResponse error = new ApiErrorResponse(
                 HttpStatus.CONFLICT,
                 ex.getMessage(),
-                Arrays.asList("Movie Already Exists")
+                List.of("Movie Already Exists")
         );
         return handleExceptionInternal(ex, error, new HttpHeaders(), HttpStatus.CONFLICT, request);
     }
